<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    android:adjustViewBounds="true"
    >

    <!--<ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/your_logo"
    android:layout_marginBottom="32dp"/>
    -->


 <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/useren"
        android:singleLine="true"

        ></EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/passen"
        android:inputType="textPassword"
        android:singleLine="true"
        android:imeOptions="actionDone"
        />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100sp"
        android:layout_height="100sp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#800020"
        android:textColor="@color/white"
        android:text=">"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/roboto_bold"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forgotpassworden"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textViewInregistrareLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="23sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="750dp"
        android:text="@string/registeren"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"

        />


    <ImageView
        android:id="@+id/topSquare"
        android:layout_width="450dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="0sp"
        android:layout_marginEnd="0sp"
        android:layout_marginBottom="0sp"
        android:adjustViewBounds="true"
        android:padding="0sp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/wine_red_square" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="580dp"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_bold"

        android:text="@string/loginen"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/cercrosu3Login"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="-140dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu6Login"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu4Login"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-140dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu5Login"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu7Login"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="105dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />




    <TextView
        android:id="@+id/textViewWelcomeLogin"
        android:layout_width="150dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcomebacken"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="70sp"
        android:layout_height="70sp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:rotationY="180"
        android:backgroundTint="#941031"
        android:text=">"
        android:textSize="30sp" />
   <View
       android:id="@+id/transitionSquareView"
       android:layout_width="500sp"
       android:layout_height="1000sp"
       android:background="@drawable/wine_red_square"
       android:visibility="invisible"
      >
   </View>
</RelativeLayout>