<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    android:adjustViewBounds="true"
    >

    <!--<ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/your_logo"
    android:layout_marginBottom="32dp"/>
    -->


 <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/emailen"
        android:singleLine="true"
     ></EditText>

    <EditText
        android:id="@+id/editTextUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="48sp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/useren"
        android:singleLine="true"
        ></EditText>

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="562dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/passen"
        android:inputType="textPassword"
        android:singleLine="true"
        android:imeOptions="actionDone"
        />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="100sp"
        android:layout_height="100sp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#800020"
        android:text=">"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/topSquareRegister"
        android:layout_width="430dp"
        android:layout_height="240dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="0sp"
        android:layout_marginEnd="0sp"
        android:layout_marginBottom="0sp"
        android:adjustViewBounds="true"
        android:padding="0sp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/wine_red_square" />


    <TextView
        android:id="@+id/textView2Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="675dp"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/registerpageen"
        android:textStyle="bold" />
<!--
    <ImageView
        android:id="@+id/cercrosu1Register"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="-115dp"
        android:layout_marginTop="103dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />

    <ImageView
        android:id="@+id/cercrosu2Register"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
        -->
    <ImageView
        android:id="@+id/cercrosu3Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="-140dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu6Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu4Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-140dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu5Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    <ImageView
        android:id="@+id/cercrosu7Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="105dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
   <!-- <ImageView
        android:id="@+id/cercrosu4Register"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="60dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/circle_wine_red" />
    -->
    <TextView
        android:id="@+id/textViewWelcomeLoginRegister"
        android:layout_width="150dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcomeen"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonBackRegister"
        android:layout_width="70sp"
        android:layout_height="70sp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:rotationY="180"
        android:backgroundTint="#941031"
        android:text=">"
        android:textSize="30sp" />
   <View
       android:id="@+id/transitionSquareViewRegister"
       android:layout_width="500sp"
       android:layout_height="1000sp"
       android:background="@drawable/wine_red_square"
       android:visibility="invisible"
      >
   </View>
</RelativeLayout>